--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix frontend\"",
-    "frontend": "npm run dev --prefix frontend"
-  },
+  "dev": "concurrently \"npm run dev --prefix frontend\"",
+  "frontend": "npm run dev --prefix frontend",
+  "build": "npm run build --prefix frontend"
+},
   "devDependencies": {
     "concurrently": "^9.2.1"
+  },
+  "dependencies": {
+    "@refinedev/core": "^5.0.4",
+    "@refinedev/simple-rest": "^6.0.0"
   }
 }
