--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
   "dev": "concurrently \"npm run dev --prefix frontend\"",
   "frontend": "npm run dev --prefix frontend",
-  "build": "npm run build --prefix frontend"
+  "build": "npm run build --prefix frontend",
+  "build-frontend": "npm install && cd frontend && npm install && npm run build"
 },
   "devDependencies": {
     "concurrently": "^9.2.1"
