--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-  "dev": "concurrently \"npm run dev --prefix frontend\"",
-  "frontend": "npm run dev --prefix frontend",
-  "build": "npm run build --prefix frontend",
-  "build-frontend": "npm install && cd frontend && npm install && npm run build"
-},
+    "dev": "concurrently \"npm run dev --prefix frontend\"",
+    "frontend": "npm run dev --prefix frontend",
+    "build": "npm run build --prefix frontend",
+    "build-frontend": "npm install && cd frontend && npm install && npm run build"
+  },
   "devDependencies": {
     "concurrently": "^9.2.1"
   },
   "dependencies": {
     "@refinedev/core": "^5.0.4",
-    "@refinedev/simple-rest": "^6.0.0"
+    "@refinedev/simple-rest": "^6.0.0",
+    "swiper": "^12.0.3"
   }
 }
