--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^9.2.1"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@refinedev/core": "^5.0.4",
     "@refinedev/simple-rest": "^6.0.0",
     "swiper": "^12.0.3"
